Source/ISS/Development/PawsSupport/Devices/Bus_1553/Atlas/Remote PC test software/Include/BTIEBR.H

typedef void VOID;
typedef void * LPVOID;
typedef int INT32;
typedef int * LPINT32;
typedef unsigned short UINT16;
typedef unsigned short * LPUINT16;
typedef unsigned int UINT32;
typedef unsigned int * LPUINT32;
typedef unsigned long MSGADDR;
typedef unsigned long LISTADDR;
typedef unsigned long * LPMSGADDR;
typedef int BOOL;
typedef void * HCORE;
typedef int HCORE;
typedef int ERRVAL;
typedef struct
{
    UINT16 msgflag;             //Driver writes message flags
    UINT16 msgopt;              //Driver writes message options
    UINT16 msgerr;              //Card writes message errors
    UINT16 msgact;              //Card writes message activity
    UINT16 resptime;            //Card writes response time
    UINT16 resv5;               //Reserved field
    UINT16 datacount;           //Card writes data count
    UINT16 extflag;             //Driver writes external flags
    union {
        UINT32 timetag;         //Card writes time tag
        UINT32 hitcount;        //Card writes hit count
    };
    union {
        UINT32 elapsetime;      //Card writes elapsed time
        UINT32 mintime;         //Card writes min time
        UINT32 maxtime;         //Card writes max time
    };
    UINT32 preaddr;             //Driver writes pre-proc address
    UINT32 postaddr;            //Driver writes post-proc address
    UINT32 timetagh;            //Card writes extended timetag
    UINT16 resv18;              //Reserved field
    UINT16 resv19;              //Reserved field
    UINT16 cwd;                 //Card/User writes command word (R/T)
	UINT16 cwdinfo;				//Card/User writes command word info
    UINT16 swd;                 //Card writes status word
	UINT16 swdinfo;		    	//Card writes status word info
    UINT16 data[32];            //User/Card writes data words (R/T)
    UINT16 extra[8];            //User/Card writes extra words (R/T)
} MSGFIELDSEBR;
typedef MSGFIELDSEBR * LPMSGFIELDSEBR;
BTIEBRAPI ERRVAL __stdcall BTIEBR_MonFilterSAEx(INT32 rtlink,UINT32 rcvsamask,UINT32 xmtsamask,UINT32 rcvmcmask,UINT32 xmtmcmask,INT32 channum,HCORE handleval);
BTIEBRAPI UINT16 __stdcall BTIEBR_MsgCheck(MSGADDR msgaddr,HCORE handleval);
BTIEBRAPI MSGADDR __stdcall BTIEBR_MsgCommRd(LPMSGFIELDSEBR buf,MSGADDR msgaddr,HCORE handleval);
BTIEBRAPI MSGADDR __stdcall BTIEBR_MsgCommWr(LPMSGFIELDSEBR buf,MSGADDR msgaddr,HCORE handleval);
BTIEBRAPI MSGADDR __stdcall BTIEBR_MsgConfig(UINT32 configval,HCORE handleval);
BTIEBRAPI MSGADDR __stdcall BTIEBR_MsgConfigEx(UINT32 configval,UINT16 cwd,HCORE handleval);
BTIEBRAPI UINT16 __stdcall BTIEBR_MsgCWDLinkRd(MSGADDR msgaddr,HCORE handleval);
BTIEBRAPI VOID __stdcall BTIEBR_MsgCWDLinkWr(UINT16 cwdlink,MSGADDR msgaddr,HCORE handleval);
BTIEBRAPI UINT16 __stdcall BTIEBR_MsgCWDRd(MSGADDR msgaddr,HCORE handleval);
BTIEBRAPI VOID __stdcall BTIEBR_MsgCWDWr(UINT16 cwd,MSGADDR msgaddr,HCORE handleval);
BTIEBRAPI UINT16 __stdcall BTIEBR_MsgErrorRd(MSGADDR msgaddr,HCORE handleval);
BTIEBRAPI VOID __stdcall BTIEBR_MsgErrorWr(UINT16 value,MSGADDR msgaddr,HCORE handleval);
BTIEBRAPI UINT16 __stdcall BTIEBR_MsgFlagRd(MSGADDR msgaddr,HCORE handleval);
BTIEBRAPI VOID __stdcall BTIEBR_MsgFlagWr(UINT16 msgflag,MSGADDR msgaddr,HCORE handleval);
BTIEBRAPI BOOL __stdcall BTIEBR_MsgIsAccessed(MSGADDR msgaddr,HCORE handleval);
BTIEBRAPI UINT16 __stdcall BTIEBR_MsgOptRd(MSGADDR msgaddr,HCORE handleval);
BTIEBRAPI VOID __stdcall BTIEBR_MsgOptWr(UINT16 msgopt,MSGADDR msgaddr,HCORE handleval);
BTIEBRAPI MSGADDR __stdcall BTIEBR_MsgReset(MSGADDR msgaddr,HCORE handleval);
BTIEBRAPI MSGADDR __stdcall BTIEBR_MsgResetEx(MSGADDR msgaddr,HCORE handleval);
BTIEBRAPI UINT16 __stdcall BTIEBR_MsgSWDLinkRd(MSGADDR msgaddr,HCORE handleval);
BTIEBRAPI UINT16 __stdcall BTIEBR_MsgSWDRd(MSGADDR msgaddr,HCORE handleval);
BTIEBRAPI ERRVAL __stdcall BTIEBR_PlayClear(INT32 channum,HCORE handleval);
BTIEBRAPI ERRVAL __stdcall BTIEBR_PlayConfigEx(UINT32 configval,UINT32 playcount,UINT32 rtlinkmask,INT32 channum,HCORE handleval);
BTIEBRAPI UINT32 __stdcall BTIEBR_PlayCounterWr(UINT32 totalcount,INT32 channum,HCORE handleval);
BTIEBRAPI INT32 __stdcall BTIEBR_PlayStatusEx(LPUINT32 totalcount,INT32 channum,HCORE handleval);
BTIEBRAPI UINT16 __stdcall BTIEBR_PlayWrEx(LPUINT16 buf,UINT16 bufcount,INT32 channum,HCORE handleval);
BTIEBRAPI ERRVAL __stdcall BTIEBR_RTConfigEx(UINT32 configval,INT32 rtlink,INT32 channum,HCORE handleval);
BTIEBRAPI ERRVAL __stdcall BTIEBR_RTConfigExx(UINT32 configval,INT32 rtlink,INT32 channum,HCORE handleval);
BTIEBRAPI LISTADDR __stdcall BTIEBR_RTCreateListEx(UINT32 listconfigval,INT32 skipval,INT32 count,UINT32 msgconfigval,BOOL mcflag,INT32 rtlink,BOOL trflag,INT32 saval,INT32 channum,HCORE handleval);
BTIEBRAPI LISTADDR __stdcall BTIEBR_RTCreateListExx(UINT32 listconfigval,INT32 skipval,INT32 count,UINT32 msgconfigval,BOOL mcflag,INT32 rtlink,BOOL trflag,INT32 saval,INT32 channum,HCORE handleval);
BTIEBRAPI ERRVAL __stdcall BTIEBR_RTResponseTimeRd(LPUINT16 timeval,INT32 rtlink,INT32 channum,HCORE handleval);
BTIEBRAPI ERRVAL __stdcall BTIEBR_RTResponseTimeWr(UINT16 timeval,INT32 rtlink,INT32 channum,HCORE handleval);
BTIEBRAPI UINT16 __stdcall BTIEBR_RTStatus(INT32 rtlink,INT32 channum,HCORE handleval);
BTIEBRAPI ERRVAL __stdcall BTIEBR_SABlkWr(INT32 rtlink,INT32 saval,INT32 channum,HCORE handleval);
BTIEBRAPI ERRVAL __stdcall BTIEBR_SABlkWrEx(INT32 channum,HCORE handleval);
BTIEBRAPI ERRVAL __stdcall BTIEBR_SchedBuild(INT32 nummsgs,LPMSGADDR msgaddr,LPINT32 freq,INT32 channum,HCORE handleval);
BTIEBRAPI ERRVAL __stdcall BTIEBR_SchedBuildEx(INT32 nummsgs,LPMSGADDR msgaddr,LPINT32 freq,LPINT32 period,LPVOID buf,UINT32 bufsize,INT32 channum,HCORE handleval);
BTIEBRAPI ERRVAL __stdcall BTIEBR_SchedBuildExx(UINT32 frametime,INT32 nummsgs,LPMSGADDR msgaddr,LPINT32 period,LPVOID buf,UINT32 bufsize,INT32 channum,HCORE handleval);
BTIEBRAPI ERRVAL __stdcall BTIEBR_SchedCalc(LPMSGADDR msgaddr,INT32 channum,HCORE handleval);
BTIEBRAPI VOID __stdcall BTIEBR_SchedDisplay(UINT32 nummsgs,LPUINT32 count);
BTIEBRAPI VOID __stdcall BTIEBR_SchedHook(INT32 index,LPVOID ptr);
BTIEBRAPI ERRVAL __stdcall BTIEBR_SchedInsEnd(INT32 channum,HCORE handleval);
BTIEBRAPI ERRVAL __stdcall BTIEBR_SchedInsMsg(UINT32 index,LPMSGADDR msgaddr,INT32 channum,HCORE handleval);
BTIEBRAPI ERRVAL __stdcall BTIEBR_SchedInsStart(UINT32 frametime,UINT32 count,INT32 channum,HCORE handleval);
BTIEBRAPI UINT32 __stdcall BTIEBR_SchedMaxval(LPUINT32 array,UINT32 arraycount);
BTIEBRAPI UINT32 __stdcall BTIEBR_SchedMinval(LPUINT32 array,UINT32 arraycount);
BTIEBRAPI ERRVAL __stdcall BTIEBR_SerialClear(INT32 channum,HCORE handleval);
BTIEBRAPI ERRVAL __stdcall BTIEBR_SerialConfig(UINT32 configval,UINT16 count,INT32 channum,HCORE handleval);
BTIEBRAPI ERRVAL __stdcall BTIEBR_SerialConfigEx(UINT32 configval,UINT16 count,INT32 channum,HCORE handleval);
BTIEBRAPI INT32 __stdcall BTIEBR_SerialStatus(INT32 channum,HCORE handleval);
BTIEBRAPI UINT32 __stdcall BTIEBR_SerialWr(LPUINT16 buf,INT32 channum,HCORE handleval);
BTIEBRAPI ERRVAL __stdcall BTIEBR_TestProtocol(HCORE handleval);
BTIEBRAPI UINT16 __stdcall BTIEBR_ValPackRTCWD(INT32 MCflag,INT32 TAval,INT32 TRflag,INT32 SAval,INT32 count);
BTIEBRAPI VOID __stdcall BTIEBR_ValUnpackRTCWD(UINT16 cwd,LPINT32 BCASTflag,LPINT32 MCflag,LPINT32 TAval,LPINT32 TRflag,LPINT32 SAval,LPINT32 count);
/**
*
*  Channel number constants
*
**/

#define CH0  0x0000           //Channel 0
#define CH1  0x0001           //Channel 1
#define CH2  0x0002           //Channel 2
#define CH3  0x0003           //Channel 3
#define CH4  0x0004           //Channel 4
#define CH5  0x0005           //Channel 5
#define CH6  0x0006           //Channel 6
#define CH7  0x0007           //Channel 7
#define	CH8  0x0008           //Channel 8
#define	CH9  0x0009           //Channel 9
#define	CH10 0x000A           //Channel 10
#define	CH11 0x000B           //Channel 11
#define	CH12 0x000C           //Channel 12
#define	CH13 0x000D           //Channel 13
#define	CH14 0x000E           //Channel 14
#define	CH15 0x000F           //Channel 15
#define	CH16 0x0010           //Channel 16
#define	CH17 0x0011           //Channel 17
#define	CH18 0x0012           //Channel 18
#define	CH19 0x0013           //Channel 19
#define	CH20 0x0014           //Channel 20
#define	CH21 0x0015           //Channel 21
#define	CH22 0x0016           //Channel 22
#define	CH23 0x0017           //Channel 23
#define	CH24 0x0018           //Channel 24
#define	CH25 0x0019           //Channel 25
#define	CH26 0x001A           //Channel 26
#define	CH27 0x001B           //Channel 27
#define	CH28 0x001C           //Channel 28
#define	CH29 0x001D           //Channel 29
#define	CH30 0x001E           //Channel 30
#define	CH31 0x001F           //Channel 31
/**
*
*  Logical hub configuration options
*
**/

enum {	LHUBCFGEBR_DEFAULT    = 0x00000000L,      //Select all default settings
		LHUBCFGEBR_ENABLE     = 0x00000000L,      //Enable all external ports (default)
		LHUBCFGEBR_DISABLE    = 0x00000001L,      //Disable all external ports
		LHUBCFGEBR_SPEC       = 0x00000000L,      //LHub will be configured for Spec mode (default)
		LHUBCFGEBR_SWITCH     = 0x00000010L,      //LHub will be configured for Switch mode
		LHUBCFGEBR_LINK       = 0x00000020L       //LHub will be configured for Link mode
};