Source/ISS/Development/CommonInterfaceControlLayer/Cicl_Devices/AtxmlLE1553_5/Vendor/Include/BTIEBRVB.BAS

Public Declare Function BTIEBR_MonFilterSAEx Lib "BTIEBR.DLL" Alias "_BTIEBR_MonFilterSAEx@28" (ByVal rtlink As Long, ByVal rcvsamask As Long, ByVal xmtsamask As Long, ByVal rcvmcmask As Long, ByVal xmtmcmask As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_MsgCheck Lib "BTIEBR.DLL" Alias "_BTIEBR_MsgCheck@8" (ByVal msgaddr As Long, ByVal handleval As Long) As Integer
Public Declare Function BTIEBR_MsgCommRd Lib "BTIEBR.DLL" Alias "_BTIEBR_MsgCommRd@12" (ByRef buf As MSGFIELDSEBR, ByVal msgaddr As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_MsgCommWr Lib "BTIEBR.DLL" Alias "_BTIEBR_MsgCommWr@12" (ByRef buf As MSGFIELDSEBR, ByVal msgaddr As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_MsgConfig Lib "BTIEBR.DLL" Alias "_BTIEBR_MsgConfig@8" (ByVal configval As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_MsgConfigEx Lib "BTIEBR.DLL" Alias "_BTIEBR_MsgConfigEx@12" (ByVal configval As Long, ByVal cwd As Integer, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_MsgCWDLinkRd Lib "BTIEBR.DLL" Alias "_BTIEBR_MsgCWDLinkRd@8" (ByVal msgaddr As Long, ByVal handleval As Long) As Integer
Public Declare Sub BTIEBR_MsgCWDLinkWr Lib "BTIEBR.DLL" Alias "_BTIEBR_MsgCWDLinkWr@12" (ByVal cwdlink As Integer, ByVal msgaddr As Long, ByVal handleval As Long)
Public Declare Function BTIEBR_MsgCWDRd Lib "BTIEBR.DLL" Alias "_BTIEBR_MsgCWDRd@8" (ByVal msgaddr As Long, ByVal handleval As Long) As Integer
Public Declare Sub BTIEBR_MsgCWDWr Lib "BTIEBR.DLL" Alias "_BTIEBR_MsgCWDWr@12" (ByVal cwd As Integer, ByVal msgaddr As Long, ByVal handleval As Long)
Public Declare Function BTIEBR_MsgErrorRd Lib "BTIEBR.DLL" Alias "_BTIEBR_MsgErrorRd@8" (ByVal msgaddr As Long, ByVal handleval As Long) As Integer
Public Declare Sub BTIEBR_MsgErrorWr Lib "BTIEBR.DLL" Alias "_BTIEBR_MsgErrorWr@12" (ByVal value As Integer, ByVal msgaddr As Long, ByVal handleval As Long)
Public Declare Function BTIEBR_MsgFlagRd Lib "BTIEBR.DLL" Alias "_BTIEBR_MsgFlagRd@8" (ByVal msgaddr As Long, ByVal handleval As Long) As Integer
Public Declare Sub BTIEBR_MsgFlagWr Lib "BTIEBR.DLL" Alias "_BTIEBR_MsgFlagWr@12" (ByVal msgflag As Integer, ByVal msgaddr As Long, ByVal handleval As Long)
Public Declare Function BTIEBR_MsgIsAccessed Lib "BTIEBR.DLL" Alias "_BTIEBR_MsgIsAccessed@8" (ByVal msgaddr As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_MsgOptRd Lib "BTIEBR.DLL" Alias "_BTIEBR_MsgOptRd@8" (ByVal msgaddr As Long, ByVal handleval As Long) As Integer
Public Declare Sub BTIEBR_MsgOptWr Lib "BTIEBR.DLL" Alias "_BTIEBR_MsgOptWr@12" (ByVal msgopt As Integer, ByVal msgaddr As Long, ByVal handleval As Long)
Public Declare Function BTIEBR_MsgReset Lib "BTIEBR.DLL" Alias "_BTIEBR_MsgReset@8" (ByVal msgaddr As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_MsgResetEx Lib "BTIEBR.DLL" Alias "_BTIEBR_MsgResetEx@8" (ByVal msgaddr As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_MsgSWDLinkRd Lib "BTIEBR.DLL" Alias "_BTIEBR_MsgSWDLinkRd@8" (ByVal msgaddr As Long, ByVal handleval As Long) As Integer
Public Declare Function BTIEBR_MsgSWDRd Lib "BTIEBR.DLL" Alias "_BTIEBR_MsgSWDRd@8" (ByVal msgaddr As Long, ByVal handleval As Long) As Integer
Public Declare Function BTIEBR_PlayClear Lib "BTIEBR.DLL" Alias "_BTIEBR_PlayClear@8" (ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_PlayConfigEx Lib "BTIEBR.DLL" Alias "_BTIEBR_PlayConfigEx@20" (ByVal configval As Long, ByVal playcount As Long, ByVal rtlinkmask As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_PlayCounterWr Lib "BTIEBR.DLL" Alias "_BTIEBR_PlayCounterWr@12" (ByVal totalcount As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_PlayStatusEx Lib "BTIEBR.DLL" Alias "_BTIEBR_PlayStatusEx@12" (ByRef totalcount As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_PlayWrEx Lib "BTIEBR.DLL" Alias "_BTIEBR_PlayWrEx@16" (ByRef buf As Integer, ByVal bufcount As Integer, ByVal channum As Long, ByVal handleval As Long) As Integer
Public Declare Function BTIEBR_RTConfigEx Lib "BTIEBR.DLL" Alias "_BTIEBR_RTConfigEx@16" (ByVal configval As Long, ByVal rtlink As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_RTConfigExx Lib "BTIEBR.DLL" Alias "_BTIEBR_RTConfigExx@16" (ByVal configval As Long, ByVal rtlink As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_RTCreateListEx Lib "BTIEBR.DLL" Alias "_BTIEBR_RTCreateListEx@40" (ByVal listconfigval As Long, ByVal skipval As Long, ByVal count As Long, ByVal msgconfigval As Long, ByVal mcflag As Long, ByVal rtlink As Long, ByVal trflag As Long, ByVal saval As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_RTCreateListExx Lib "BTIEBR.DLL" Alias "_BTIEBR_RTCreateListExx@40" (ByVal listconfigval As Long, ByVal skipval As Long, ByVal count As Long, ByVal msgconfigval As Long, ByVal mcflag As Long, ByVal rtlink As Long, ByVal trflag As Long, ByVal saval As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_RTResponseTimeRd Lib "BTIEBR.DLL" Alias "_BTIEBR_RTResponseTimeRd@16" (ByRef timeval As Integer, ByVal rtlink As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_RTResponseTimeWr Lib "BTIEBR.DLL" Alias "_BTIEBR_RTResponseTimeWr@16" (ByVal timeval As Integer, ByVal rtlink As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_RTStatus Lib "BTIEBR.DLL" Alias "_BTIEBR_RTStatus@12" (ByVal rtlink As Long, ByVal channum As Long, ByVal handleval As Long) As Integer
Public Declare Function BTIEBR_SABlkWr Lib "BTIEBR.DLL" Alias "_BTIEBR_SABlkWr@16" (ByVal rtlink As Long, ByVal saval As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_SABlkWrEx Lib "BTIEBR.DLL" Alias "_BTIEBR_SABlkWrEx@8" (ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_SchedBuild Lib "BTIEBR.DLL" Alias "_BTIEBR_SchedBuild@20" (ByVal nummsgs As Long, ByRef msgaddr As Long, ByRef freq As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_SchedBuildEx Lib "BTIEBR.DLL" Alias "_BTIEBR_SchedBuildEx@32" (ByVal nummsgs As Long, ByRef msgaddr As Long, ByRef freq As Long, ByRef period As Long, ByRef buf As Long, ByVal bufsize As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_SchedBuildExx Lib "BTIEBR.DLL" Alias "_BTIEBR_SchedBuildExx@32" (ByVal frametime As Long, ByVal nummsgs As Long, ByRef msgaddr As Long, ByRef period As Long, ByRef buf As Long, ByVal bufsize As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_SchedCalc Lib "BTIEBR.DLL" Alias "_BTIEBR_SchedCalc@12" (ByRef msgaddr As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Sub BTIEBR_SchedDisplay Lib "BTIEBR.DLL" Alias "_BTIEBR_SchedDisplay@8" (ByVal nummsgs As Long, ByRef count As Long)
Public Declare Sub BTIEBR_SchedHook Lib "BTIEBR.DLL" Alias "_BTIEBR_SchedHook@8" (ByVal index As Long, ByVal ptr As Long)
Public Declare Function BTIEBR_SchedInsEnd Lib "BTIEBR.DLL" Alias "_BTIEBR_SchedInsEnd@8" (ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_SchedInsMsg Lib "BTIEBR.DLL" Alias "_BTIEBR_SchedInsMsg@16" (ByVal index As Long, ByRef msgaddr As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_SchedInsStart Lib "BTIEBR.DLL" Alias "_BTIEBR_SchedInsStart@16" (ByVal frametime As Long, ByVal count As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_SchedMaxval Lib "BTIEBR.DLL" Alias "_BTIEBR_SchedMaxval@8" (ByRef arrayval As Long, ByVal arrayvalcount As Long) As Long
Public Declare Function BTIEBR_SchedMinval Lib "BTIEBR.DLL" Alias "_BTIEBR_SchedMinval@8" (ByRef arrayval As Long, ByVal arrayvalcount As Long) As Long
Public Declare Function BTIEBR_SerialClear Lib "BTIEBR.DLL" Alias "_BTIEBR_SerialClear@8" (ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_SerialConfig Lib "BTIEBR.DLL" Alias "_BTIEBR_SerialConfig@16" (ByVal configval As Long, ByVal count As Integer, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_SerialConfigEx Lib "BTIEBR.DLL" Alias "_BTIEBR_SerialConfigEx@16" (ByVal configval As Long, ByVal count As Integer, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_SerialStatus Lib "BTIEBR.DLL" Alias "_BTIEBR_SerialStatus@8" (ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_SerialWr Lib "BTIEBR.DLL" Alias "_BTIEBR_SerialWr@12" (ByRef buf As Integer, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_TestProtocol Lib "BTIEBR.DLL" Alias "_BTIEBR_TestProtocol@4" (ByVal handleval As Long) As Long
Public Declare Function BTIEBR_ValPackRTCWD Lib "BTIEBR.DLL" Alias "_BTIEBR_ValPackRTCWD@20" (ByVal mcflag As Long, ByVal taval As Long, ByVal trflag As Long, ByVal saval As Long, ByVal count As Long) As Integer
Public Declare Sub BTIEBR_ValUnpackRTCWD Lib "BTIEBR.DLL" Alias "_BTIEBR_ValUnpackRTCWD@28" (ByVal cwd As Integer, ByRef bcastflag As Long, ByRef mcflag As Long, ByRef taval As Long, ByRef trflag As Long, ByRef saval As Long, ByRef count As Long)

'/**
'*
'*  Channel number constants
'*
'**/

Public Const CH0 As Integer = &H0    '//Channel 0
Public Const CH1 As Integer = &H1    '//Channel 1
Public Const CH2 As Integer = &H2    '//Channel 2
Public Const CH3 As Integer = &H3    '//Channel 3
Public Const CH4 As Integer = &H4    '//Channel 4
Public Const CH5 As Integer = &H5    '//Channel 5
Public Const CH6 As Integer = &H6    '//Channel 6
Public Const CH7 As Integer = &H7    '//Channel 7
Public Const CH8 As Integer = &H8    '//Channel 8
Public Const CH9 As Integer = &H9    '//Channel 9
Public Const CH10 As Integer = &HA   '//Channel 10
Public Const CH11 As Integer = &HB   '//Channel 11
Public Const CH12 As Integer = &HC   '//Channel 12
Public Const CH13 As Integer = &HD   '//Channel 13
Public Const CH14 As Integer = &HE   '//Channel 14
Public Const CH15 As Integer = &HF   '//Channel 15
Public Const CH16 As Integer = &H10   '//Channel 16
Public Const CH17 As Integer = &H11   '//Channel 17
Public Const CH18 As Integer = &H12   '//Channel 18
Public Const CH19 As Integer = &H13   '//Channel 19
Public Const CH20 As Integer = &H14   '//Channel 20
Public Const CH21 As Integer = &H15   '//Channel 21
Public Const CH22 As Integer = &H16   '//Channel 22
Public Const CH23 As Integer = &H17   '//Channel 23
Public Const CH24 As Integer = &H18   '//Channel 24
Public Const CH25 As Integer = &H19   '//Channel 25
Public Const CH26 As Integer = &H1A   '//Channel 26
Public Const CH27 As Integer = &H1B   '//Channel 27
Public Const CH28 As Integer = &H1C   '//Channel 28
Public Const CH29 As Integer = &H1D   '//Channel 29
Public Const CH30 As Integer = &H1E   '//Channel 30
Public Const CH31 As Integer = &H1F   '//Channel 31

'/**
'*
'*  Logical hub configuration options
'*
'**/

Public Const LHUBCFGEBR_DEFAULT As Long = &H0    '//Select all default settings
Public Const LHUBCFGEBR_ENABLE As Long = &H0 '//Enable all external ports (default)
Public Const LHUBCFGEBR_DISABLE As Long = &H1    '//Disable all external ports
Public Const LHUBCFGEBR_SPEC As Long = &H0   '//LHub will be configured for Spec mode (default)
Public Const LHUBCFGEBR_SWITCH As Long = &H10 '//LHub will be configured for Switch mode
Public Const LHUBCFGEBR_LINK As Long = &H20   '//LHub will be configured for Link mode
